@@ -1,3 +1,9 @@
+2015-10-24  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 36941: Src/utils.c, Src/zsh.h, Src/Modules/tcp.c: ensure shell
+	knows about file descriptiors used by ztcp and allow such file
+	descriptors to be marked as internal if needed (not yet used).
+
 2015-10-22  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Doc/Zsh/contrib.yo: vcs_info docs: Typo fix.
